--- a/Tip_Calculator/Tip_Calculator/Base.lproj/Main.storyboard
+++ b/Tip_Calculator/Tip_Calculator/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="KFT-hd-Ajg">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -108,6 +108,7 @@
                                 <state key="normal" title="Calculate"/>
                                 <connections>
                                     <action selector="calculateAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="oLt-9M-N9E"/>
+                                    <segue destination="aMI-dA-nKk" kind="show" identifier="tipDetailSegue" id="zRb-WY-FxT"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -142,6 +143,8 @@
                             <constraint firstItem="RyZ-eX-RPA" firstAttribute="top" secondItem="E56-fS-Ag1" secondAttribute="bottom" constant="52" id="zt0-3o-BFh"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="ukz-UX-ejt"/>
+                    <nil key="simulatedTopBarMetrics"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="320" height="568"/>
                     <connections>
@@ -153,6 +156,75 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="688" y="397"/>
+        </scene>
+        <!--Tip Detail View Controller-->
+        <scene sceneID="jlg-q9-YLM">
+            <objects>
+                <viewController storyboardIdentifier="tipDetailController" id="aMI-dA-nKk" customClass="TipDetailViewController" customModule="Tip_Calculator" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="cli-Ik-Zqu"/>
+                        <viewControllerLayoutGuide type="bottom" id="G2j-6c-z4j"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="4do-Db-6ZS">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="AQ8-9y-b9w">
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cellIdentifier" id="e0r-nW-opo">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="e0r-nW-opo" id="z5E-9u-Gar">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="aMI-dA-nKk" id="iZW-2Y-fyz"/>
+                                    <outlet property="delegate" destination="aMI-dA-nKk" id="q0R-VP-BqZ"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="AQ8-9y-b9w" firstAttribute="top" secondItem="cli-Ik-Zqu" secondAttribute="bottom" id="98K-S3-DlT"/>
+                            <constraint firstAttribute="trailing" secondItem="AQ8-9y-b9w" secondAttribute="trailing" id="TBp-iY-Gcx"/>
+                            <constraint firstItem="G2j-6c-z4j" firstAttribute="top" secondItem="AQ8-9y-b9w" secondAttribute="bottom" id="Z3k-oD-KEv"/>
+                            <constraint firstItem="AQ8-9y-b9w" firstAttribute="leading" secondItem="4do-Db-6ZS" secondAttribute="leading" id="n4f-UT-gYT"/>
+                        </constraints>
+                    </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="320" height="568"/>
+                    <connections>
+                        <outlet property="tableView" destination="AQ8-9y-b9w" id="6qr-KC-Nnq"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XR5-h3-Usi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1135" y="402"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="NWE-q6-YTt">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="KFT-hd-Ajg" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="320" height="568"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="fiD-26-rHV">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="obO-ji-4fo"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BCV-pD-RfJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="268" y="402"/>
         </scene>
